<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <!-- Default versie - engels -->
    <string name="app_name" translatable="false">TracClient</string>
    <string name="about_button">About TracClient</string>
    <string name="Back">Back</string>
    <string name="tracUrl" translatable="false">TRAC url</string>
    <string name="tracUrlHint" translatable="false">http://host/trac/login/rpc</string>
    <string name="tracUser">Username</string>
    <string name="tracUserHint">Username</string>
    <string name="tracPw">Password</string>
    <string name="tracPwHint">Password</string>
    <string name="bewaren">Store credentials</string>
    <string name="vertext">Verify</string>
    <string name="invalidCred">Credentials not valid</string>
    <string name="validCred">Credentials valid</string>
    <string name="detail_heading">Ticket Details</string>
    <string name="list_heading">Ticket Listing</string>
    <string name="ophalen">Loading data</string>
    <string name="tlrefresh">Refresh list</string>
    <string name="dfrefresh">Refresh ticket</string>
    <string name="filter">Filter options</string>
    <string name="sort">Sort</string>
    <string name="changehost">Select another Trac host</string>
    <string name="updateticket">Modify status of ticket</string>
    <string name="updatefield">Modify field of ticket</string>
    <string name="warning" translatable="false">!</string>
    <string name="nieuw">New ticket</string>
    <string name="nodata">No data</string>
    <string name="nodatadesc">Data of this ticket is not yet loaded</string>
    <string name="connerr">Connection error</string>
    <string name="newtick">Create new ticket</string>
    <string name="store">Store ticket</string>
    <string name="storerr">Error during create ticket</string>
    <string name="oktext" translatable="false">OK</string>
    <string name="storerrdesc">Cannot store ticket</string>
    <string name="storok">Ticket created</string>
    <string name="storokdesc">Ticket created, id =</string>
    <string name="config">Configure fields</string>
    <string name="comment">Add comment</string>
    <string name="state">Change status</string>
    <string name="attach">Add attachment</string>
    <string name="chooser_title">Ticket attachment</string>
    <string name="tlshare">Share list</string>
    <string name="dfshare">Share ticket</string>
    <string name="updtick">Modify ticket</string>
    <string name="perfact">Perform action</string>
    <string name="storeupd">Store changes</string>
    <string name="cancel">Cancel</string>
    <string name="invalidJson">Invalid JSON message received</string>
    <string name="noticketUnk">No ticket created: unknown reason</string>
    <string name="nolist">Cannot create list</string>
    <string name="noadapter">Cannot create adapter</string>
    <string name="invtick">Invalid ticketnumber</string>
    <string name="noaction">No action supplied</string>
    <string name="zoekfilter">Enter search string</string>
    <string name="zoek">Search</string>
    <string name="title_text" translatable="false">TRAC\nCLIENT</string>
    <string name="version_text" translatable="false">V.unknown</string>
    <string name="storefilter">Save filter</string>
    <string name="storesort">Save sort order</string>
    <string name="filterdef">Specify filter</string>
    <string name="sortdef">Specify sort order</string>
    <string name="moveup">move up</string>
    <string name="movedown">move down</string>
    <string name="direction">set direction</string>
    <string name="sortdel">remove sort</string>
    <string name="help">Help</string>
    <string name="Add">Add</string>
    <string name="auteur" translatable="false">Michiel van Loon</string>
    <string name="sslHack">Accept Self Signed Certificates</string>
    <string name="sslHack1">Accept Problematic Certificates</string>

    <string-array name="filter2_choice" translatable="false">
        <item>"="</item>
        <item>"!="</item>
        <item>"~="</item>
        <item>"!~="</item>
        <item>"^="</item>
        <item>"!^="</item>
        <item>"$="</item>
        <item>"!$="</item>
    </string-array>
    <string-array name="filter3_choice">
        <item>is equal to</item>
        <item>is not equal to</item>
        <item>contains</item>
        <item>does not contain</item>
        <item>starts with</item>
        <item>does not start with</item>
        <item>ends on</item>
        <item>does not end on</item>
    </string-array>

    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="getlist">Fetch Ticketlist</string>
    <string name="storeprofile">Save profile</string>
    <string name="profiletext">Enter name for the profile to be saved</string>
    <string name="loadprofile">Load login profile</string>
    <string name="areyousure">Are you sure?</string>
    <string name="delprofiletext">Delete profile</string>
    <string name="loadprofiletext">Profile cannot be loaded</string>
    <string name="notfound">Not found</string>
    <string name="sdcardmissing">SDcard is missing. Cannot store attachment</string>
    <string name="ioerror">ExternalStorage - Error writing</string>
    <string name="chooseapp">Choose an application to open with:</string>
    <string name="notify">Notify</string>
    <string name="exportprofiles">Export profiles</string>
    <string name="importprofiles">Import profiles</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string name="xmlwritecompleted">Export to XML succeeded</string>
    <string name="xmlreadcompleted">Import from XML succeeded</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="saveupdate">Saving update on server</string>
    <string name="saveticket">Saving ticket</string>
    <string name="selectticket">Select individual ticket</string>
    <string name="ticketnotfound">Ticket not found</string>
    <string name="chooseticknr">Enter ticketnumber</string>
    <string name="chooseticket">Choose ticket</string>
    <string name="checking">Checking</string>
    <string name="updating">Updating</string>
    <string name="wait">One moment please</string>
    <string name="debug">Debug</string>
    <string name="foundnew">Modified or new tickets found:</string>
    <string name="notifmod">Modified tickets found</string>
    <string name="tracLogin">Log in to TRAC server</string>

    <string-array name="filter1_choice" translatable="false">
        <item>"="</item>
        <item>"!="</item>
    </string-array>

    <string name="nopermission">No permission to query tickets on server. Make sure TICKET_VIEW is set for the configured user.</string>
    <string name="notickets">No tickets found</string>
    <string name="nocomment">Cannot modify comment</string>
    <string name="notpossible">Not possible</string>
    <string name="notchange">You cannot modify this field</string>
    <string name="wrongdb">Wrong database</string>
    <string name="wrongdbtext1">Current database = </string>
    <string name="wrongdbtext3">\nSelect the right database first</string>
    <string name="wrongdbtext2">\nRequested database = </string>
    <string name="showempty">Show empty fields</string>
    <string name="unsaved">Leave screen and save changes?</string>
    <string name="nee">No</string>
    <string name="ja">Yes</string>
	<string name="hostnametitle">Ignore Hostname verification?"</string>
	<string name="hostnametext">Hostname verification failed when trying to connect to server.\nMessage = "</string>
	<string name="hostnameign">\nIgnore the verification?"</string>
	
</resources>