<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/dfrefresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:menuCategory="container"
        android:title="@string/dfrefresh"
        myapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/dfempty"
        android:checkable="true"
        android:checked="false"
        android:menuCategory="container"
        android:title="@string/showempty"/>
    <item
        android:id="@+id/dfupdate"
        android:icon="@android:drawable/ic_menu_edit"
        android:menuCategory="container"
        android:title="@string/updateticket"
        myapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/dfattach"
        android:icon="@drawable/content_new_attachment"
        android:menuCategory="container"
        android:title="@string/attach"
        myapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/dfselect"
        android:menuCategory="container"
        android:title="@string/selectticket"/>
    <item
        android:id="@+id/dfshare"
        android:icon="@android:drawable/ic_menu_share"
        android:menuCategory="container"
        android:title="@string/dfshare"
        myapp:showAsAction="ifRoom"/>

</menu>