<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2013,2014 Michiel van Loon
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/updateTop"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/aboveAdBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/adview_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/tracLogin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/loadprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loadprofile"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/loginspinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tracUrl"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/trac_URL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:ellipsize="none"
                        android:hint="@string/tracUrlHint"
                        android:inputType="textUri" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/sslHack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/sslHack"
                    android:visibility="gone" />

					<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tracUser"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/trac_User"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp"
                        android:ellipsize="none"
                        android:hint="@string/tracUserHint"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tracPw"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/trac_Pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp"
                        android:ellipsize="none"
                        android:hint="@string/tracPwHint"
                        android:inputType="textPassword" />
                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/bewaren"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/bewaren" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/verBut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertext" />

                <TextView
                    android:id="@+id/connWarn"
					android:layout_width="match_parent"
					android:gravity="center_vertical|center_horizontal"
                    android:layout_height="wrap_content"
					android:layout_marginTop="3dp"
                    android:text="@string/validCred"
                    android:textAppearance="?android:attr/textAppearanceMedium"
					android:drawableLeft="@drawable/ic_warn"
					android:drawableStart="@drawable/ic_warn"
                    android:visibility="gone" />
 
                <TextView
                    android:id="@+id/connWarnSts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/storebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
						android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/okBut"
                        android:layout_toStartOf="@+id/okBut"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/storeprofile" />

                    <Button
                        android:id="@+id/okBut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/oktext" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/adBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>
