<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".TitlescreenActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:text="@string/title_text"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:text="@string/version_text"
            android:textColor="#33b5e5"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:text="@string/auteur"
            android:textColor="#33b5e5"
            android:textSize="25sp"
            android:textStyle="bold" />

        <WebView
            android:id="@+id/webfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0099cc" />
    </LinearLayout>

</FrameLayout>