<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/updateTop"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/aboveAdBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="50dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/updtick"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="5dp"
                    android:text="@string/perfact"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioGroup
                        android:id="@+id/actionblock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/actionblock"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/explaintxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:paddingLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/optieval"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:inputType="text"
                            android:paddingLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Spinner
                            android:id="@+id/opties"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:paddingLeft="10dp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/comment"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="6"
                    android:minLines="1"
                    android:padding="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/updNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/notify" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/canbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/storebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/storeupd" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/adBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>